<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateTarea"
    android:orientation="vertical"
    android:gravity="start"
    android:paddingHorizontal="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/editar"
        android:textSize="30sp"
        android:layout_marginVertical="25dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_tarea"
        />

    <EditText
        android:id="@+id/inputNombreEdit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="63dp"
        android:layout_marginBottom="10dp"/>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_tarea"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:minLines="2"
        android:maxLines="7"
        android:layout_marginBottom="10dp"
        android:id="@+id/inputDescripcionEdit"/>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_fin"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@mipmap/calendar"
            android:id="@+id/btnCalendarFinEdit"
            android:layout_gravity="start"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textoFechaFin"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_inicio"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@mipmap/calendar"
            android:id="@+id/btnCalendarInicioEdit"
            android:layout_gravity="start"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textoFechaInicio"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:text="@string/progreso_actual"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0%"
            android:id="@+id/txtProgreso"
            />

    </LinearLayout>



    <SeekBar
        android:id="@+id/seekBarProgreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desea_recordatorio"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchRecordatorioEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/txtCambiante"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/seccion_opcional_edit"
        android:visibility="invisible"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frecuencia_recordatorio"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioRecordatorioEdit"
            android:layout_marginBottom="10dp"
            >

            <RadioButton
                android:id="@+id/radioSiEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinco_antes" />

            <RadioButton
                android:id="@+id/radioNoEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uno_antes" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/guardar"
        android:padding="15dp"
        android:id="@+id/btnEditTarea"
        />



</LinearLayout>