<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_tarea"
        android:textSize="30sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTareasMain"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="25dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="12dp"
            android:gravity="center"
            >

            <ImageButton
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/btn_circulo_azul"
                android:src="@mipmap/plus"
                android:layout_marginBottom="10dp"
                android:id="@+id/btnAdd"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anadir_tarea"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="12dp"
            android:gravity="center"
            >

            <ImageButton
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/btn_circulo_azul"
                android:src="@mipmap/board"
                android:layout_marginBottom="10dp"
                android:id="@+id/btnBoard"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_tablero"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>