<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadTarea"
    android:orientation="vertical"
    android:paddingVertical="50dp"
    android:paddingHorizontal="35dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginBottom="15dp"
        android:id="@+id/txtTituloRead"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:id="@+id/txtParaElRead"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="85"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:id="@+id/txtPorcentajeRead"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginBottom="20dp"
        android:id="@+id/txtDescripcionRead"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordatorio"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="15dp"
            android:gravity="center"
            >

            <ImageButton
                android:layout_width="150px"
                android:layout_height="150px"
                android:src="@mipmap/edit"
                android:contentDescription="@string/editar"
                android:id="@+id/editTarea"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editar"
                android:textSize="15sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="15dp"
            android:gravity="center"
            >

            <ImageButton
                android:layout_width="150px"
                android:layout_height="150px"
                android:src="@mipmap/trash"
                android:contentDescription="@string/eliminar"
                android:id="@+id/deleteTarea"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eliminar"
                android:textSize="15sp"
                />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>